--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,3 +4,9 @@
 @import "./layout/base.scss";
 @import "./layout/Montserrat.scss";
 @import "./layout/UI-kit.scss";
+
+// ---- COMPONENTS SCSS ----
+
+@import "../components/radio-buttons/radio-buttons.scss";
+@import "../components/benefits/benefits.scss";
+@import "../components/expandable-checkbox-list/expandable-checkbox-list.scss";
