--- a/src/pages/UI-kit.pug
+++ b/src/pages/UI-kit.pug
@@ -67,3 +67,5 @@
     include ../components/benefits/benefits.pug
     h2 RADIO BUTTONS 
     include ../components/radio-buttons/radio-buttons.pug
+    h2 TOGGLE 
+    include ../components/toggle/toggle.pug
