--- a/src/style/layout/variables.scss
+++ b/src/style/layout/variables.scss
@@ -5,4 +5,5 @@ $Dark-shade-50: rgba(31, 32, 65, 0.5);
 $Dark-shade-25: rgba(31, 32, 65, 0.25);
 $Dark-shade-5: rgba(31, 32, 65, 0.05);
 $Purple: #bc9cff;
+$Purple-gradient: linear-gradient($Purple 0%, #8ba4f9 100%);
 $Green: #6fcf97;
