--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -10,3 +10,4 @@
 @import "../components/radio-buttons/radio-buttons.scss";
 @import "../components/benefits/benefits.scss";
 @import "../components/expandable-checkbox-list/expandable-checkbox-list.scss";
+@import "../components/toggle/toggle.scss";
