--- a/src/pages/UI-kit.pug
+++ b/src/pages/UI-kit.pug
@@ -69,3 +69,5 @@
     include ../components/radio-buttons/radio-buttons.pug
     h2 TOGGLE 
     include ../components/toggle/toggle.pug
+    h2 LIKE BUTTON 
+    include ../components/like-button/like-button.pug
