--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -11,3 +11,4 @@
 @import "../components/benefits/benefits.scss";
 @import "../components/expandable-checkbox-list/expandable-checkbox-list.scss";
 @import "../components/toggle/toggle.scss";
+@import "../components/like-button/like-button.scss";
