--- a/src/index.pug
+++ b/src/index.pug
@@ -7,5 +7,5 @@ html(lang="ru")
         title Hotel Reservation Project
         link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
     body 
-        include pages/UI-kit.pug
+        include pages/UI-kit/UI-kit.pug
         
