--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -5,3 +5,8 @@
 @import "../../components/like-button/like-button.scss";
 @import "../../components/dropdown/dropdown.scss";
 @import "../../components/text-field/text-field.scss";
+@import "../../components/masked-text-field/masked-text-field.scss";
+@import "../../components/date-dropdown/date-dropdown.scss";
+@import "../../components/filter-date-dropdown/filter-date-dropdown.scss";
+@import "../../components/calendar/calendar.scss";
+@import "../../components/subscription-text-field/subscription-text-field.scss";
