--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,6 +2,6 @@
 @import "./layout/mixins.scss";
 @import "./layout/variables.scss";
 @import "./layout/base.scss";
-@import "./layout/Montserrat.scss";
-@import "./layout/UI-kit.scss";
+@import "./layout/fonts.scss";
+@import "../pages/UI-kit/UI-kit.scss";
 @import "./layout/components.scss";
