--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -41,6 +41,7 @@
     left: 0;
     width: 100%;
     background: #fff;
+    box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
     &__list {
         margin: 0;
         padding: 0 0 0 15px;
