--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -24,3 +24,5 @@
     include ../../components/toggle/toggle.pug
     h2 LIKE BUTTON 
     include ../../components/like-button/like-button.pug
+    h2 RATE BUTTON 
+    include ../../components/rate-button/rate-button.pug
