--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -10,3 +10,4 @@
 @import "../../components/filter-date-dropdown/filter-date-dropdown.scss";
 @import "../../components/calendar/calendar.scss";
 @import "../../components/subscription-text-field/subscription-text-field.scss";
+@import "../../components/rate-button/rate-button.scss";
