--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -34,7 +34,7 @@
         transition: 0.4s;
         &::before {
             left: 23px;
-            background: $Purple-gradient;
+            background: $Primary-gradient;
             transition: 0.4s;
         }
     }
