--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -26,3 +26,5 @@
     include ../../components/like-button/like-button.pug
     h2 RATE BUTTON 
     include ../../components/rate-button/rate-button.pug
+    h2 PAGINATION 
+    include ../../components/pagination/pagination.pug
