--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -11,3 +11,4 @@
 @import "../../components/calendar/calendar.scss";
 @import "../../components/subscription-text-field/subscription-text-field.scss";
 @import "../../components/rate-button/rate-button.scss";
+@import "../../components/pagination/pagination.scss";
