--- a/src/components/filter-date-dropdown/filter-date-dropdown.scss
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.scss
@@ -1,4 +1,5 @@
 .filter-date-dropdown {
     @include text-field;
-    text-transform: uppercase;
+    @include arrow-after;
+    max-width: 266px;
 }
