--- a/src/components/subscription-text-field/subscription-text-field.pug
+++ b/src/components/subscription-text-field/subscription-text-field.pug
@@ -1,2 +1,2 @@
 form.subscription
-    input(type="email", name="text-field", placeholder="Email").subscription-text-field
+    input(type="email" name="text-field" placeholder="Email").subscription__email
