--- a/src/components/filter-date-dropdown/filter-date-dropdown.pug
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.pug
@@ -1,2 +1,3 @@
 form
-    input(type="text" id="el-filter" name="date" placeholder="дд.мм.гггг" autocomplete="off").filter-date-dropdown
+    button(type="button" autocomplete="off").filter-date-dropdown
+        | 19 авг - 23 авг
