--- a/src/components/subscription-text-field/subscription-text-field.scss
+++ b/src/components/subscription-text-field/subscription-text-field.scss
@@ -12,7 +12,8 @@
         z-index: 100;
         pointer-events: none;
     }
-    &-text-field {
+    &__email {
         @include text-field;
+        max-width: 266px;
     }
 }
