--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -28,3 +28,5 @@
     include ../../components/rate-button/rate-button.pug
     h2 PAGINATION 
     include ../../components/pagination/pagination.pug
+    h2 RANGE SLIDER 
+    include ../../components/range-slider/range-slider.pug
