--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -12,3 +12,4 @@
 @import "../../components/subscription-text-field/subscription-text-field.scss";
 @import "../../components/rate-button/rate-button.scss";
 @import "../../components/pagination/pagination.scss";
+@import "../../components/range-slider/range-slider.scss";
