--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -1,5 +1,5 @@
 .ui-kit__container
-    h1(style="color: brown;") UI KIT
+    h1(style="color: #bc9cff;") UI KIT
     h2 TEXT FIELD
     include ../../components/text-field/text-field.pug
     h2 MASKED TEXT FIELD
@@ -30,3 +30,5 @@
     include ../../components/pagination/pagination.pug
     h2 RANGE SLIDER 
     include ../../components/range-slider/range-slider.pug
+    h2 BUTTONS 
+    include ../../components/buttons/buttons.pug
