--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -13,3 +13,4 @@
 @import "../../components/rate-button/rate-button.scss";
 @import "../../components/pagination/pagination.scss";
 @import "../../components/range-slider/range-slider.scss";
+@import "../../components/buttons/buttons.scss";
