rich-checkbox-buttons

--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -32,3 +32,5 @@
     include ../../components/range-slider/range-slider.pug
     h2 BUTTONS 
     include ../../components/buttons/buttons.pug
+    h2 RICH CHECKBOX BUTTONS
+    include ../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
