--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -14,3 +14,4 @@
 @import "../../components/pagination/pagination.scss";
 @import "../../components/range-slider/range-slider.scss";
 @import "../../components/buttons/buttons.scss";
+@import "../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss";
