--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -34,3 +34,5 @@
     include ../../components/buttons/buttons.pug
     h2 RICH CHECKBOX BUTTONS
     include ../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
+    h2 BULLET LIST 
+    include ../../components/bullet-list/bullet-list.pug
