--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -15,3 +15,4 @@
 @import "../../components/range-slider/range-slider.scss";
 @import "../../components/buttons/buttons.scss";
 @import "../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss";
+@import "../../components/bullet-list/bullet-list.scss";
