--- a/src/components/rich-checkbox-buttons/rich-checkbox-buttons.scss
+++ b/src/components/rich-checkbox-buttons/rich-checkbox-buttons.scss
@@ -14,6 +14,9 @@
         &:not(:last-of-type) {
             margin-bottom: 43px;
         }
+        &:last-of-type {
+            margin-bottom: 30px;
+        }
     }
     &__text {
         position: relative;
