--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -16,3 +16,4 @@
 @import "../../components/buttons/buttons.scss";
 @import "../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss";
 @import "../../components/bullet-list/bullet-list.scss";
+@import "../../components/comment/comment.scss";
