--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -36,3 +36,5 @@
     include ../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
     h2 BULLET LIST 
     include ../../components/bullet-list/bullet-list.pug
+    h2 COMMENT 
+    include ../../components/comment/comment.pug
