--- a/src/pages/UI-kit/UI-kit.pug
+++ b/src/pages/UI-kit/UI-kit.pug
@@ -12,6 +12,8 @@
     include ../../components/subscription-text-field/subscription-text-field.pug
     h2 DROPDOWN (WITH ITEM COUNTER)
     include ../../components/dropdown/dropdown.pug
+    h2 DROPDOWN (ROOM)
+    include ../../components/dropdown/dropdown-room.pug
     h2 CALENDAR
     include ../../components/calendar/calendar.pug
     h2 EXPANDABLE CHECKBOX LIST
