--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -17,3 +17,4 @@
 @import "../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss";
 @import "../../components/bullet-list/bullet-list.scss";
 @import "../../components/comment/comment.scss";
+@import "../../components/dropdown/dropdown-room.scss";
