--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,4 +1,11 @@
 .pagination {
+    &__text {
+        margin: 10px 6px;
+        font-weight: 400;
+        color: $Dark-shade-75;
+        font-size: 14px;
+        line-height: 24px;
+    }
     &__list {
         display: flex;
         padding-left: 0;
