--- a/src/style/layout/variables.scss
+++ b/src/style/layout/variables.scss
@@ -4,7 +4,8 @@ $Dark-shade-75: rgba(31, 32, 65, 0.75);
 $Dark-shade-50: rgba(31, 32, 65, 0.5);
 $Dark-shade-25: rgba(31, 32, 65, 0.25);
 $Dark-shade-5: rgba(31, 32, 65, 0.05);
-$Purple: #bc9cff;
+$Purple: rgb(188, 156, 255);
 $Primary-gradient: linear-gradient($Purple 0%, #8ba4f9 100%);
+$Primary-gradient--opacity: linear-gradient(rgba(188, 156, 255, 0.25) 0%, rgba(139, 164, 249, 0.25) 100%);
 $Green: #6fcf97;
 $Secondary-gradient: linear-gradient($Green 0%, #66d2ea 100%);
