--- a/src/components/masked-text-field/masked-text-field.pug
+++ b/src/components/masked-text-field/masked-text-field.pug
@@ -1,1 +1,1 @@
-input(type="text" name="date" id="el" placeholder="дд.мм.гггг" autocomplete="off").masked-text-field
+input(type="text" name="date" placeholder="дд.мм.гггг" autocomplete="off").masked-text-field
