--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,4 +1,5 @@
 .dropdown
+    h3 dropdown
     button(type="submit" name="dropdown-field").dropdown-type Сколько гостей
     .dropdown-guest(hidden)
         ul.dropdown-guest__list
