--- a/src/components/radio-buttons/radio-buttons.pug
+++ b/src/components/radio-buttons/radio-buttons.pug
@@ -1,4 +1,5 @@
 form.radio
+    h3 radio buttons
     .radio-container
         label.radio-container__label
             input(type="radio" name='sex' value="male").radio-container__label-input
