--- a/src/components/toggle/toggle.pug
+++ b/src/components/toggle/toggle.pug
@@ -1,4 +1,5 @@
-.container    
+.container  
+    h3 toggle button
     label.toggle
         input.toggle__inp(type="checkbox")
         span.toggle__slider
