--- a/src/components/dropdown/dropdown-room.pug
+++ b/src/components/dropdown/dropdown-room.pug
@@ -1,4 +1,5 @@
 .dropdown-room
+    h3 dropdown
     button(type="submit" name="dropdown-field-room").dropdown-type Удобства номера
     .dropdown-guest(hidden)
         ul.dropdown-guest__list
