--- a/src/components/masked-text-field/masked-text-field.pug
+++ b/src/components/masked-text-field/masked-text-field.pug
@@ -1,1 +1,3 @@
-input(type="text" name="date" placeholder="дд.мм.гггг" autocomplete="off").masked-text-field
+.container 
+    h3 masked text field
+    input(type="text" name="date" placeholder="дд.мм.гггг" autocomplete="off").masked-text-field
