--- a/src/components/text-field/text-field.pug
+++ b/src/components/text-field/text-field.pug
@@ -1,1 +1,3 @@
-input(type="text", name="text-field", placeholder="Email").text
+.container
+    h3 Text Field
+    input(type="text", name="text-field", placeholder="Email").text
