--- a/src/style/layout/base.scss
+++ b/src/style/layout/base.scss
@@ -32,8 +32,7 @@ h3 {
     text-transform: uppercase;
     line-height: 14.63px;
     color: $Dark-shade-100;
-}
-.container {
-    max-width: 260px;
-    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: left;
 }
