--- a/src/components/subscription-text-field/subscription-text-field.scss
+++ b/src/components/subscription-text-field/subscription-text-field.scss
@@ -3,7 +3,7 @@
     &::after {
         content: "";
         position: absolute;
-        top: calc(100% - 66%);
+        top: calc(50% + 5px);
         right: 13px;
         width: 17px;
         height: 17px;
