--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,7 +1,7 @@
 form.date-form
     .date-form__container
-        h3 fffff
+        h3 dropdown
         input(type="text" max="1979-12-31" placeholder='дд.мм.гггг').date-form__inp.date-form__inp--start.datepicker
     .date-form__container
-        h3 ffffssf
+        h3 dropdown
         input(type="text" max="1979-12-31" placeholder='дд.мм.гггг').date-form__inp.date-form__inp--end.datepicker
