--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -18,3 +18,4 @@
 @import "../../components/bullet-list/bullet-list.scss";
 @import "../../components/comment/comment.scss";
 @import "../../components/dropdown/dropdown-room.scss";
+@import "../../components/room-search__cards/room-search.scss";
