--- a/src/components/room-search__cards/room-search.pug
+++ b/src/components/room-search__cards/room-search.pug
@@ -1,6 +1,6 @@
-.room-search
-    .room-search__content
-        .room-search__title 
+.card
+    .card__content
+        .card__title 
             h2 Найдём номера под ваши пожелания
         form.date-form
             .date-form__container
