--- a/src/pages/UI-kit/__cards/cards.pug
+++ b/src/pages/UI-kit/__cards/cards.pug
@@ -1,2 +1,4 @@
 h2 ROOM SERACH 
 include ../../../components/room-search__cards/room-search.pug
+h2 REGISTRATION 
+include ../../../components/registration/registration.pug
