--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -19,3 +19,4 @@
 @import "../../components/comment/comment.scss";
 @import "../../components/dropdown/dropdown-room.scss";
 @import "../../components/room-search__cards/room-search.scss";
+@import "../../components/registration/registration.scss";
