--- a/src/style/layout/mixins.scss
+++ b/src/style/layout/mixins.scss
@@ -21,6 +21,9 @@
         outline: none;
         border: 1px solid $Dark-shade-50;
     }
+    &::-webkit-calendar-picker-indicator {
+        display: none;
+    }
 }
 
 // ---- ARROW INDICATOR ----
