--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -34,7 +34,8 @@
         & span {
             position: absolute;
             top: calc(50% - 7px);
-            left: calc(50% - 29px);
+            left: 21%;
+            right: 19%;
             z-index: 2;
             color: #BC9CFF;
         }
