--- a/src/components/registration/registration.pug
+++ b/src/components/registration/registration.pug
@@ -31,4 +31,4 @@
         .card__login
             .card__login-info Уже есть аккаунт на Toxin
             button(type='submit').button__submit.button__submit--transparent 
-                span click me
+                span войти
