--- a/src/pages/UI-kit/__cards/cards.pug
+++ b/src/pages/UI-kit/__cards/cards.pug
@@ -2,3 +2,5 @@ h2 ROOM SERACH
 include ../../../components/room-search__cards/room-search.pug
 h2 REGISTRATION 
 include ../../../components/registration/registration.pug
+h2 LOGIN 
+include ../../../components/login/login.pug
