--- a/src/style/layout/components.scss
+++ b/src/style/layout/components.scss
@@ -20,3 +20,4 @@
 @import "../../components/dropdown/dropdown-room.scss";
 @import "../../components/room-search__cards/room-search.scss";
 @import "../../components/registration/registration.scss";
+@import "../../components/login/login.scss";
