--- a/src/index.pug
+++ b/src/index.pug
@@ -1,11 +1,5 @@
-doctype html
-html(lang="ru")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Hotel Reservation Project
-        link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
-    body 
-        //- include pages/UI-kit/UI-kit.pug
-        include pages/UI-kit/__cards/cards.pug
+extends pages/layout/layout
+
+block content
+    //- include pages/UI-kit/UI-kit.pug
+    include pages/UI-kit/__cards/cards.pug
