--- a/src/pages/UI-kit/__cards/cards.pug
+++ b/src/pages/UI-kit/__cards/cards.pug
@@ -4,3 +4,5 @@ h2 REGISTRATION
 include ../../../components/registration/registration.pug
 h2 LOGIN 
 include ../../../components/login/login.pug
+h2 ORDER 
+include ../../../components/order/order.pug
