--- a/src/style/layout/base.scss
+++ b/src/style/layout/base.scss
@@ -26,6 +26,7 @@ h2 {
     font-weight: 700;
     line-height: 23, 16px;
     color: $Dark-shade-100;
+    margin: 0;
 }
 h3 {
     font-size: 12px;
