--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,7 @@
 extends pages/layout/layout
 
+block header 
+    include pages/UI-kit/__headers&footers/headers&footers.pug
+
 block content
-    include pages/UI-kit/__cards/cards.pug
+    
