--- a/src/pages/layout/layout.pug
+++ b/src/pages/layout/layout.pug
@@ -7,4 +7,5 @@ html(lang="ru")
         title Hotel Reservation Project
         link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
     body
+        block header
         block content
