--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -10,7 +10,8 @@
         background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
         text-transform: uppercase;
         color: #FFF;
-        width: 99px;
+        min-width: 99px;
+        padding: 10px 20px;
         height: 44px;
         font-weight: 700;
         font-size: 12px;
