--- a/src/style/layout/fonts.scss
+++ b/src/style/layout/fonts.scss
@@ -41,3 +41,14 @@
     font-weight: 600;
     font-style: normal;
 }
+
+// material icons
+
+
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(../assets/fonts/material-icons/MaterialIcons-Regular.ttf) format('truetype');
+}
+
