--- a/src/style/layout/variables.scss
+++ b/src/style/layout/variables.scss
@@ -4,6 +4,7 @@ $Dark-shade-75: rgba(31, 32, 65, 0.75);
 $Dark-shade-50: rgba(31, 32, 65, 0.5);
 $Dark-shade-25: rgba(31, 32, 65, 0.25);
 $Dark-shade-5: rgba(31, 32, 65, 0.05);
+$Dark-shade-10: rgba(31, 32, 65, 0.1);
 $Purple: rgb(188, 156, 255);
 $Primary-gradient: linear-gradient($Purple 0%, #8ba4f9 100%);
 $Primary-gradient--opacity: linear-gradient(rgba(188, 156, 255, 0.25) 0%, rgba(139, 164, 249, 0.25) 100%);
