--- a/src/components/__headers&footers/__header/header.scss
+++ b/src/components/__headers&footers/__header/header.scss
@@ -1,16 +1,18 @@
 @import '../../buttons/buttons.scss';
 @import '/style/layout/mixins/arrow-after.scss';
 @import '/assets/fonts/material-icons/material-icons.scss';
+@import './__authorization--true/authorization--true.scss';
+@import './__authorization--false/authorization--false.scss';
+@import './__header-menu/header-menu.scss';
 
 .header {
     width: 100%;
-    height: 70px;
     background: #fff;
     box-shadow: rgba($color: #000000, $alpha: 0.5);
     &__container {
         display: flex;
         justify-content: space-between;
-        padding: 13px 140px;
+        padding: 1rem 10%;
         align-items: center;
     }
 
@@ -41,115 +43,56 @@
         align-items: center;
     }
 
-    &__link {
-        color: $Dark-shade-50;
-        text-decoration: none;
-        position: relative;
-
-        &:hover {
-            color: $Dark-shade-75;
-        }
-        
-        &:not(:first-of-type) {
-            margin-left: 20px;
-        }
-        &--active {
-            color: $Dark-shade-75;
-            font-weight: 700;
-        }
-        &--drop {
-                position: relative;
-                margin-right: 15px;
-                padding-bottom: 2px;
-                &-icon {
-                    position: absolute;
-                }
-                &:hover {
-                    & .header__link-menu {
-                        display: block;
-                        color: $Dark-shade-50;
-                    }
-                }
-        }
-
-        &-menu {
-            position: absolute;
-            top: 5px;
-            left: 0;
-            padding-left: 0;
-            width: fit-content;
-            background-color: white;
-            border: 1px solid $Dark-shade-5;
-            border-radius: 2px;
-            display: none;
-            z-index: 2;
-        }
-        &-item {
-            list-style: none;
-            white-space: nowrap;
-            margin: 5px 10px;
-            &:hover {
-                color: $Dark-shade-75;
-            }
-        }
-    }
-
-    &__authorization {
-        display: flex;
-        justify-content: space-between;
-        margin-left: 20px;
-    }
-    &__registration {
-        margin-left: 20px;
-    }
-    &__name {
-        color: $Dark-shade-50;
-        border-left: 1px solid $Dark-shade-10;
-        padding-left: 20px;
-    }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1120px) {
     .header {
         &__container {
-            padding-left: 10px;
-            padding-right: 10px;
-            width: 100%;
+            padding-left: 1em;
+            padding-right: 1em;
         }
     }
 }
-@media (max-width: 912px) {
+@media (max-width: 920px) {
     .header {
-        &__content {
-            padding-left: 20px;
-        }
-        &__link {
-            white-space: nowrap;
-            font-size: 12px;
-        }
-        &__authorization {
-            // transform: scale(75%);
-            margin-left: 20px;
-            margin-right: 0;
-        }
-    }
-}
-
-@media (max-width: 870px) {
-    .header {
-        &__logo-text {
-            display: none;
+        &__container {
+            flex-direction: column;
+            row-gap: 1em;
         }
     }
 }
 
 @media (max-width: 800px) {
     .header {
-        &__logo-svg {
+        &__content {
+            flex-direction: column;
+            row-gap: 1em;
+        }
+        &__acc {
+            display: inline-block;
+        }
+        &__name {
+            border-left: none;
+            padding-left: 0;
+            line-height: 0;
+            margin-left: 0.5em;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .header {
+        &__menu {
+            display: none;
+        }
+        &__authorization {
             display: none;
         }
         &__container {
-            justify-content: flex-start;
+            flex-direction: row;
         }
+    }
+    .burger {
+        display: block;
     }
 }
