--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -11,8 +11,7 @@
         text-transform: uppercase;
         color: #FFF;
         min-width: 99px;
-        padding: 10px 20px;
-        height: 44px;
+        padding: 0.834em 1.668em;
         font-weight: 700;
         font-size: 12px;
         line-height: 15px;
@@ -25,32 +24,36 @@
     }
     &--transparent {
         cursor: pointer;
-        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
         text-transform: uppercase;
-        color: #BC9CFF;
-        width: 99px;
-        height: 44px;
+        min-width: 99px;
+        padding: 0.834em 1.668em;
         font-weight: 700;
         font-size: 12px;
         line-height: 15px;
         position: relative;
-        & span {
+        color: #BC9CFF;
+        z-index: 2;
+        &::before {
+            content: '';
             position: absolute;
-            top: calc(50% - 7px);
-            left: 21%;
-            right: 19%;
-            z-index: 2;
-            color: #BC9CFF;
+            top: 0;
+            left: 0;
+            background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+            border-radius: 22px;
         }
         &::after {
             content: '';
             position: absolute;
             top: 2px;
             left: 2px;
-            width: 95px;
-            height: 40px;
+            width: calc(100% - 4px);
+            height: calc(100% - 4px);
             background: #FFF;
             border-radius: 22px;
+            z-index: -1;
         }
         &:hover {
             opacity: 0.5;
