header-mobile-adaptive

--- a/src/components/__headers&footers/__header/__authorization--false/authorization--false.pug
+++ b/src/components/__headers&footers/__header/__authorization--false/authorization--false.pug
@@ -1,4 +1,5 @@
 mixin auto--false            
     .header__authorization
+        i.material-icons.header__acc--mobile account_circle
         +buttonTransparent('войти')(class='header__login')
         +buttonSmall('зарегистрироваться')(class='header__registration')
