--- a/src/pages/layout/layout.pug
+++ b/src/pages/layout/layout.pug
@@ -7,5 +7,7 @@ html(lang="ru")
         title Hotel Reservation Project
         link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
     body
-        block header
-        block content
+        .wrapper
+            block header
+            block content
+            block footer
