--- a/src/components/__headers&footers/__header/__authorization--true/authorization--true.pug
+++ b/src/components/__headers&footers/__header/__authorization--true/authorization--true.pug
@@ -1,4 +1,4 @@
 mixin auto--true(name= 'Юлий Цезарь')            
     .header__authorization
-        span.material-icons.header__acc account_circle
+        i.material-icons.header__acc.header__acc--mobile account_circle
         p.header__name= name
