--- a/src/components/__headers&footers/__header/header.pug
+++ b/src/components/__headers&footers/__header/header.pug
@@ -13,7 +13,7 @@ include ./__header-menu/header-menu.pug
 
             +header-menu('О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения')
 
-            - var authorised = false
+            - var authorised = true
 
             if (authorised === true) 
                 +auto--true
