--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,11 @@
 extends pages/layout/layout
 
 block header 
-    include pages/UI-kit/__headers&footers/headers&footers.pug
+    include components/__headers&footers/__header/header.pug
 
 block content
-    
+    .main 
+        p dsdasda
+
+block footer
+    include components/__headers&footers/__footer/footer.pug
