--- a/src/components/subscription-text-field/subscription-text-field.scss
+++ b/src/components/subscription-text-field/subscription-text-field.scss
@@ -5,10 +5,11 @@
     &::after {
         content: "";
         position: absolute;
-        top: calc(50% + 5px);
-        right: 13px;
-        width: 17px;
-        height: 17px;
+        top: 2%;
+        right: 1%;
+        width: calc(100% - 239px);
+        height: calc(100% - 2px);
+        background-position: center;
         background-image: url(../assets/images/arrow_forward.svg);
         background-repeat: no-repeat;
         z-index: 100;
@@ -17,5 +18,6 @@
     &__email {
         @include text-field;
         max-width: 266px;
+        padding-right: 2.2em;
     }
 }
