--- a/src/components/__headers&footers/__footer/footer.scss
+++ b/src/components/__headers&footers/__footer/footer.scss
@@ -1,5 +1,125 @@
+@import '../../subscription-text-field/subscription-text-field.scss';
+
 .footer {
-    background: black;
-    width: 100%;
-    height: 50px;
+    background: white;
+    box-shadow: rgba($color: #000000, $alpha: 0.5);
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        padding: 0 10%;
+    }
+
+    &__main {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        column-gap: 4em;
+        margin: 100px 0;
+    }
+
+    &__nav {
+        list-style: none;
+        padding-left: 0;
+        white-space: nowrap;
+        font-size: 14px;
+        color: $Dark-shade-100;
+        font-weight: 700;
+        margin: 0;
+    }
+    &__item {
+        margin-top: 20px;
+        font-weight: 400;
+        color: $Dark-shade-50;
+        cursor: pointer;
+    }
+
+    &__text {
+        font-weight: 400;
+        color: $Dark-shade-50;
+        white-space: break-spaces;
+    }
+
+    &__line {
+        height: 1px;
+        width: 100%;
+        background-color: $Dark-shade-25;
+    }
+
+    &__additional {
+        display: flex;
+        justify-content: space-between;
+        margin: 26px 0;
+        padding: 0 10%;
+    }
+    &__copyright {
+        color: $Dark-shade-75;
+        font-size: 14px;
+    }
+    &__social {
+        display: flex;
+        column-gap: 20px;
+    }
+    &__social-network {
+        cursor: pointer;
+    }
+}
+
+@media (max-width: 1120px) {
+    .footer__container {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    .footer__main {
+        column-gap: 1em;
+    }
+    .footer__additional {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+}
+
+@media (max-width: 900px) {
+    .footer__main {
+        flex-wrap: wrap;
+        margin: 1em 0;
+        row-gap: 2em;
+    }
+    .footer__info {
+        text-align: center;
+        width: 100%;
+    }
+    .footer__nav {
+        text-align: center;
+    }
+    .footer__nav:last-of-type {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer__text {
+        display: none;
+    }
+    .footer__nav {
+        display: none;
+    }
+    .footer__line {
+        display: none;
+    }
+    .footer__info {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer__additional {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        row-gap: 25px;
+    }
+    .footer {
+        padding: 8.143em 1em;
+    }
 }
