--- a/src/components/subscription-text-field/subscription-text-field.pug
+++ b/src/components/subscription-text-field/subscription-text-field.pug
@@ -1,3 +1,3 @@
-form.subscription
-    h3 subscription text field
-    input(type="email" name="text-field" placeholder="Email").subscription__email
+mixin subscribe(email='Email')
+    form.subscription
+        input(type="email" name="text-field" placeholder=email).subscription__email
